--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               </div>
             </article>
             <article>
-              <img src="img6.jpg">
+              <img src="img6.png">
               <div class="text">
                 <h4>Cooking</h4>
               </div>
